# tree-sitter-nickel

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  shell.nix  tree-sitter.json
.github/workflows/: build.yml
bindings/c/: tree-sitter-nickel.pc.in
bindings/c/tree_sitter/: tree-sitter-nickel.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nickel/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNickelTests/: TreeSitterNickelTests.swift
corpus/: basic.txt  errors.txt  let-rec.txt  match.txt  metadata.txt  patterns-extended.txt  patterns.txt  string.txt  type.txt
corpus/examples/: array.txt  fibonacci.txt  gcc.txt  merge.txt  polymorphism.txt  record-contract.txt  simple-contracts.txt
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: array.txt  basic.txt  bool.txt  enum-type.txt  errors.txt  let-block.txt  match.txt  metadata.txt  patterns-extended.txt  patterns.txt  primop.txt  record.txt  string.txt  type.txt
test/corpus/examples/: array.txt  fibonacci.txt  gcc.txt  merge.txt  polymorphism.txt  (+2 more)
test/highlight/: comments.ncl  functions.ncl  interpolation.ncl  keywords.ncl  literals.ncl  operators.ncl  punctuation.ncl  records.ncl  strings.ncl  types.ncl
